--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
     "@react-three/drei": "^9.65.5",
     "@react-three/fiber": "^8.12.2",
     "@testing-library/jest-dom": "^5.16.5",
